@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+        - properly kill the command process after the prompt returns
+          (broken since 0.008)
 
 0.012   2015-04-09 03:35:35Z
         - fixes for "perl! in! space!!!!"
